# fence

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE.txt  README.md  pyproject.toml  requirements.txt  test_mcp_integration.py
.github/workflows/: ci-pipeline.yaml  fence-pipeline.yaml  publish-pipeline.yaml
benchmark/: models.py  prompts.py  run.py
demo/: mcp_bedrock_integration.py  mcp_transport_examples.py  simple_agent_demo.py  tools.py  travel_agent.py
demo/base_test/: test.py
demo/demo_cook/: cook.py  prompt_templates.py  utils.py
demo/demo_dev/: dev.py
demo/demo_faq/: faq.py  prompt_templates.py  utils.py
demo/demo_label/: label.py  utils.py
demo/demo_memory/: chat.py  dynamo.py  prompts.py
demo/demo_policy/: examples.py  formatter.py  models.py  policy.py  presets.py  prompt_templates.py  prompts.py  utils.py
demo/demo_question/: question.py
demo/demo_search/: documents.py  prompt_templates.py  search.py  test_questions.py  utils.py
demo/demo_test/: prompt_templates.py  test.py  utils.py
docs/: AGENTS.md  LINKS_AND_CHAINS.md  MCP.md  MEMORY.md  MODELS.md  MULTI_AGENT.md  TOOLS_AND_UTILITIES.md
fence/: __init__.py  agents.py  chains.py  links.py  memory.py  parsers.py
fence/agents/: __init__.py  agent.py  base.py  bedrock.py  chat.py  referee.py  tool.py
fence/agents/bedrock/: __init__.py  agent.py  agent_new.py  models.py
fence/benchmark/: run.py
fence/conf/: log_config.py  logging.yaml
fence/data/: snippets.py  some_prompt_template.txt
fence/demo/: base_templates.py  cook.py  utils.py
fence/demo/demo_cook/: cook.py  utils.py
fence/demo/demo_dev/: dev.py
fence/demo/demo_faq/: faq.py  prompt_templates.py  utils.py
fence/demo/demo_label/: label.py  prompt_templates.py  utils.py
fence/demo/demo_memory/: chat.py  dynamo.py  prompts.py
fence/demo/demo_policy/: policy.py  presets.py  prompt_templates.py  utils.py
fence/demo/demo_search/: documents.py  prompt_templates.py  search.py  utils.py
fence/demo/demo_test/: prompt_templates.py  test.py  utils.py
fence/demo_cook/: cook.py  prompt_templates.py  utils.py
fence/demo_faq/: faq.py  prompt_templates.py  utils.py
fence/demo_test/: prompt_templates.py  test.py  utils.py
fence/embeddings/: base.py
fence/embeddings/bedrock/: __init__.py  base.py  nova.py  titan.py
fence/embeddings/google/: __init__.py  gemini.py
fence/embeddings/mistral/: mistral.py
fence/embeddings/ollama/: ollama.py
fence/embeddings/openai/: openai.py
fence/mcp/: client.py  tool.py
fence/memory/: __init__.py  agentcore.py  base.py  dynamodb.py  sqlite.py
fence/models/: __init__.py  base.py  claude.py  claude3.py  gpt.py  ollama.py  openai.py
fence/models/anthropic/: __init__.py  claude.py
fence/models/bedrock/: __init__.py  base.py  claude.py  nova.py
fence/models/gemini/: __init__.py  gemini.py
fence/models/mistral/: mistral.py
fence/models/ollama/: __init__.py  ollama.py
fence/models/openai/: __init__.py  gpt.py
fence/prompts/: agents.py
fence/src/llm/: base.py  base_templates.py  chains.py  claude.py  claude3.py  links.py  models.py  parsers.py  templates.py
fence/src/utils/: base.py
fence/streaming/: base.py
fence/templates/: __init__.py  base.py  messages.py  models.py  string.py
fence/tests/: test_chains.py  test_templates.py
fence/tools/: base.py  math.py  scratch.py  text.py
fence/tools/mcp/: client.py  mcp_client.py  mcp_tool.py  mcp_types.py  test_mcp_tool.py  tool.py  utils.py
fence/troupe/: chat.py  referee.py  round_table.py  superagent.py
fence/utils/: __init__.py  base.py  docstring_parser.py  logger.py  logging.py  nlp.py  optim.py  shortcuts.py
lambdas/cook/: __init__.py  cook.py
lambdas/cook/lib/: base_templates.py
lambdas/tests/: test_chains.py  test_templates.py
notebooks/: basic_usage.ipynb  demo.ipynb  multimodal_embeddings.ipynb  structured_output_demo.ipynb  using _environment.ipynb  using_bedrock_agents.ipynb  using_callbacks.ipynb  using_mcp_tools.ipynb
notebooks/mcp/: using_mcp_tools.ipynb
tests/: test_chains.py  test_claude.py  test_gpt.py  test_links.py  test_messages.py  test_parsers.py  test_templates.py
tests/agents/: test_base_agent.py  test_bedrock_agent.py  test_react_agent.py
tests/embeddings/bedrock/: test_bedrock.py  (+1 more)
tests/integration/: test_image_call.py  test_mcp_bedrock_integration.py  test_tool_calling.py
tests/memory/: test_agentcore.py  test_dynamodb.py  test_memory_base.py  test_sqlite.py
tests/models/: test_claude.py  test_gpt.py
tests/templates/: test_messages.py  test_models.py  test_string.py  test_templates.py
tests/tools/: test_mcp_client.py  test_mcp_tool.py  test_tool_ base.py  test_tool_base.py
tests/utils/: test_base.py  test_docstring_parser.py  test_nlp.py  test_optim.py  test_shortcuts.py  test_utils_base.py
(+35 files in other folders)
