[project]
authors = [
    {name = "wouter.durnez", email = "wouter.durnez@gmail.com"},
]
license = {text = "MIT"}
requires-python = "<4.0,>=3.11"
dependencies = [
    "boto3>=1.34.100,<2.0.0",
    "pydantic>=2.7.1,<3.0.0",
    "requests>=2.32.3,<3.0.0",
    "numexpr>=2.10.1,<3.0.0",
]
name = "fence-llm"
version = "0.0.22"
description = "Keep the bloat out! - A lightweight LLM interaction library"
readme = "README.md"
keywords = [
    "openai",
    "llm",
    "gpt",
    "ai",
    "nlp",
    "language",
    "model",
    "api",
    "anthropic",
    "claude",
    "wrapper",
    "fence",
]

[project.urls]
homepage = "https://github.com/WouterDurnez/fence"
repository = "https://github.com/WouterDurnez/fence"
documentation = "https://github.com/WouterDurnez/fence"

[dependency-groups]
dev = [
    "bandit<2.0.0,>=1.7.8",
    "ruff<1.0.0,>=0.4.3",
    "isort<6.0.0,>=5.13.2",
    "pytest<9.0.0,>=8.2.0",
    "black<25.0.0,>=24.4.2",
    "pre-commit<4.0.0,>=3.7.1",
    "pytest-mock<4.0.0,>=3.14.0",
    "jupyterlab<5.0.0,>=4.2.4",
    "codecov<3.0.0,>=2.1.13",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv]
package = "fence"
