#     ___
#    / __\__ _ __   ___ ___
#   / _\/ _ \ '_ \ / __/ _ \
#  / / |  __/ | | | (_|  __/
#  \/   \___|_| |_|\___\___|
#
#  Keep the bloat out! - A lightweight LLM interaction library

[project]
name = "fence-llm"
version = "0.0.22"
description = "Keep the bloat out! - A lightweight LLM interaction library"
readme = "README.md"
authors = [{name = "wouter.durnez", email = "wouter.durnez@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.11, <4.0"
keywords = ["openai", "llm", "gpt", "ai", "nlp", "language", "model", "api", "anthropic", "claude", "wrapper", "fence"]
dependencies = [
    "boto3>=1.34.100,<2.0.0",
    "pydantic>=2.7.1,<3.0.0",
    "requests>=2.32.3,<3.0.0",
    "numexpr>=2.10.1,<3.0.0"
]

[project.urls]
homepage = "https://github.com/WouterDurnez/fence"
repository = "https://github.com/WouterDurnez/fence"
documentation = "https://github.com/WouterDurnez/fence"

[dependency-groups]
dev = [
    "bandit>=1.7.8,<2.0.0",
    "ruff>=0.4.3,<1.0.0",
    "isort>=5.13.2,<6.0.0",
    "pytest>=8.2.0,<9.0.0",
    "black>=24.4.2,<25.0.0",
    "pre-commit>=3.7.1,<4.0.0",
    "pytest-mock>=3.14.0,<4.0.0",
    "jupyterlab>=4.2.4,<5.0.0",
    "codecov>=2.1.13,<3.0.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools]
packages = ["fence"]
