#     ___
#    / __\__ _ __   ___ ___
#   / _\/ _ \ '_ \ / __/ _ \
#  / / |  __/ | | | (_|  __/
#  \/   \___|_| |_|\___\___|
#
#  The bloat moat! - A lightweight LLM interaction library

[project]
name = "fence-llm"
version = "1.0.16"
description = "The bloat moat! - A lightweight LLM and Agent interaction library"
authors = [
    {name = "wouter.durnez", email = "wouter.durnez@gmail.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: Implementation :: CPython',
    'Topic :: Software Development',
    'Topic :: Scientific/Engineering',
    ]
dependencies = [
    "boto3>=1.34.100",
    "requests>=2.32.3",
    "numexpr>=2.10.1",
    "pydantic>=2.11.4",
]
keywords = ["openai", "llm", "gpt", "ai", "nlp", "language", "model", "api", "anthropic", "claude", "wrapper", "fence"]
requires = "python>=3.11"

[project.urls]
Repository = "https://github.com/WouterDurnez/fence"
Homepage = "https://github.com/WouterDurnez/fence"
Documentation = "https://github.com/WouterDurnez/fence"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["fence"]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "bandit>=1.7.8,<2.0.0",
    "ruff>=0.4.3,<1.0.0",
    "isort>=5.13.2,<6.0.0",
    "pytest>=8.2.0,<9.0.0",
    "black>=24.4.2,<25.0.0",
    "pre-commit>=3.7.1,<4.0.0",
    "pytest-mock>=3.14.0,<4.0.0",
    "jupyterlab>=4.2.4,<5.0.0",
    "codecov>=2.1.13,<3.0.0",
    "httpx>=0.28.0",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "pytest-cov>=6.0.0",
    "pillow>=11.0.0",
    "git-changelog>=2.5.3",
]

[tool.hatch.build.targets.sdist]
include = [
    "/fence",
    "/tests",
    "pyproject.toml",
    "README.md",
    "LICENSE",
]

[tool.ruff]
include = [
    "fence/**",
]
